Updated participant req
