# backend/api_gateway/internal/models/event.go
@@ -12,13 +12,15 @@ type Event struct {
 }
 
 type Participant struct {
-	ID            int64      `json:"id" validate:"required,min=1"`
-	PhotoName     *string    `json:"photo_name" validate:"omitempty"`
-	BirthDate     *time.Time `json:"birth_date" validate:"omitempty,datetime=2006-01-02T15:04:05Z"`
-	Gender        *int64     `json:"gender" validate:"omitempty"`
-	FirstName     string     `json:"first_name" validate:"required,min=1"`
-	MiddleName    string     `json:"middle_name" validate:"required,min=1"`
-	LastName      string     `json:"last_name" validate:"required,min=1"`
-	VolunteerTG   int64      `json:"volunteer_tg" validate:"omitempty"`
-	VolunteerName string     `json:"volunteer_name" validate:"omitempty"`
+	ID                   int64      `json:"id" validate:"required,min=1"`
+	PhotoName            *string    `json:"photo_name" validate:"omitempty"`
+	BirthDate            *time.Time `json:"birth_date" validate:"omitempty,datetime=2006-01-02T15:04:05Z"`
+	Gender               *int64     `json:"gender" validate:"omitempty"`
+	FirstName            string     `json:"first_name" validate:"required,min=1"`
+	MiddleName           string     `json:"middle_name" validate:"required,min=1"`
+	LastName             string     `json:"last_name" validate:"required,min=1"`
+	VolunteerTG          int64      `json:"volunteer_tg" validate:"omitempty"`
+	VolounteerFirstName  string     `json:"volounteer_first_name" validate:"omitempty"`
+	VolounteerMiddleName string     `json:"volounteer_middle_name" validate:"omitempty"`
+	VolounteerLastName   string     `json:"volounteer_last_name" validate:"omitempty"`
 }
